monitoring_stack/prometheus-service.yaml
# prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
  labels:
    app.kubernetes.io/name: prometheus
spec:
  type: LoadBalancer   # or NodePort / LoadBalancer
  ports:
    - name: web
      port: 9090
      targetPort: 9090
  selector:
    app.kubernetes.io/name: prometheus
    prometheus: kube-prom-stack-kube-prome-prometheus
